# 3380-calculator

./: CMakeLists.txt  calculator.cpp
cmake/: AddStudentTest.cmake
code/: calculator.cpp
